@@ -4526,6 +4526,288 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testCountValues
+specifier|public
+name|void
+name|testCountValues
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrInputDocument
+name|d
+init|=
+literal|null
+decl_stmt|;
+comment|// trivial
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"count"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1111"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"count_field"
+argument_list|,
+literal|"aaa"
+argument_list|,
+literal|"bbb"
+argument_list|,
+literal|"ccc"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"count_field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// edge case: no values to count, means no count
+comment|// (use default if you want one)
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"count"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1111"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|d
+operator|.
+name|containsKey
+argument_list|(
+literal|"count_field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// typical usecase: clone and count
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"clone-then-count"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1111"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"category"
+argument_list|,
+literal|"scifi"
+argument_list|,
+literal|"war"
+argument_list|,
+literal|"space"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"editors"
+argument_list|,
+literal|"John W. Campbell"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"list_price"
+argument_list|,
+literal|1000
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"scifi"
+argument_list|,
+literal|"war"
+argument_list|,
+literal|"space"
+argument_list|)
+argument_list|,
+name|d
+operator|.
+name|getFieldValues
+argument_list|(
+literal|"category"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"category_count"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"John W. Campbell"
+argument_list|)
+argument_list|,
+name|d
+operator|.
+name|getFieldValues
+argument_list|(
+literal|"editors"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1000
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"list_price"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// typical usecase: clone and count demonstrating default
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"clone-then-count"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1111"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"editors"
+argument_list|,
+literal|"Anonymous"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"list_price"
+argument_list|,
+literal|1000
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"category_count"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"Anonymous"
+argument_list|)
+argument_list|,
+name|d
+operator|.
+name|getFieldValues
+argument_list|(
+literal|"editors"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1000
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"list_price"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testCloneCombinations
 specifier|public
 name|void
